# src/routes/auth.routes.ts
@@ -1,8 +1,9 @@
 import verifySignUp from '../middleware/verifySignUp';
-import { signin,signup, updateUser} from '../controllers/auth.controller'
+import { signin, signup, updateUser } from '../controllers/auth.controller'
+import { Schemas, ValidateSchema } from '../middleware/ValidateSchema';
 
-const authRoute = function(app) {
-  app.use(function(req, res, next) {
+const authRoute = function (app) {
+  app.use(function (req, res, next) {
     res.header(
       "Access-Control-Allow-Headers",
       "x-access-token, Origin, Content-Type, Accept"
@@ -13,12 +14,13 @@ const authRoute = function(app) {
     "/api/auth/signup",
     [
       verifySignUp.checkDuplicateUsernameOrEmail,
-      verifySignUp.checkRolesExisted
+      verifySignUp.checkRolesExisted,
+      ValidateSchema(Schemas.user.create)
     ],
     signup
   );
-  app.post("/api/auth/signin", signin);
-  app.put("/api/auth/update/:id",updateUser)
+  app.post("/api/auth/signin", ValidateSchema(Schemas.user.signin), signin);
+  app.put("/api/auth/update/:id", updateUser)
 };
 
 export default authRoute;
