# src/routes/devOps.routes.ts
@@ -1,8 +1,10 @@
 import { getProjectData } from "../controllers/devOp.controller";
+import authJwt from '../middleware/authJwt';
 
 const devOpsRoute=(app)=>{
-    app.post("/api/devOps/getAllWorkItems", getProjectData);
+    app.post("/api/devOps/getAllWorkItems", authJwt.verifyToken,getProjectData);
 }
 
 
 export {devOpsRoute};
+
